--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -16,12 +16,19 @@ jobs:
     - uses: actions/checkout@v3
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+
+    - name: Update dependencies
+      run: composer update
+
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+
     - name: Generate key
       run: php artisan key:generate
+
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
+      
     - name: Create Database
       run: |
         mkdir -p database
@@ -37,7 +44,7 @@ jobs:
       run: php artisan test --parallel
       
     - name: Execute Larastan
-      run: vendor/bin/phpstan analyse
+      run: ./vendor/bin/phpstan analyse
       
     - name: Execute Laravel Pint
-      run: vendor/bin/pint --test
+      run: ./vendor/bin/pint --test
