--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -6,7 +6,6 @@ on:
 
 jobs:
   laravel-tests:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -17,24 +16,21 @@ jobs:
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
 
-    - name: Update dependencies
-      run: composer update
-
     - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      run: composer install --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
 
     - name: Generate key
       run: php artisan key:generate
 
     - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
-      
+      run: chmod -R 755 storage bootstrap/cache
+
     - name: Create Database
       run: |
         mkdir -p database
         touch database/database.sqlite
         
-    - name: Installing Package.json
+    - name: Install Node.js Dependencies
       run: npm install
         
     - name: Execute tests (Unit and Feature tests) via PEST
