ABM-10: wip doc

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,9 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:iRrC0za+gqerQy4V6XagB7N7perujhvyKUwuoIfGYGw=
+APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost:8000
-FRONTEND_URL=http://localhost:3000
+APP_URL=http://localhost:80
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -43,13 +42,13 @@ CACHE_PREFIX=
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_CLIENT=phpredis
-REDIS_HOST=redis
+REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
+MAIL_MAILER=log
+MAIL_HOST=127.0.0.1
+MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
@@ -63,8 +62,3 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
-
-SCOUT_DRIVER=meilisearch
-MEILISEARCH_HOST=http://meilisearch:7700
-
-MEILISEARCH_NO_ANALYTICS=false
