--- a/.scribe/endpoints/00.yaml
+++ b/.scribe/endpoints/00.yaml
@@ -30,7 +30,7 @@ endpoints:
         name: name
         description: 'O nome do titular da conta. Exemplo: John Doe'
         required: true
-        example: sit
+        example: eum
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -39,14 +39,14 @@ endpoints:
         name: balance
         description: 'nullable O saldo inicial da conta. Exemplo: 1000.00'
         required: false
-        example: nemo
+        example: labore
         type: numeric
         enumValues: []
         exampleWasSpecified: false
         custom: []
     cleanBodyParameters:
-      name: sit
-      balance: nemo
+      name: eum
+      balance: labore
     fileParameters: []
     responses:
       -
