--- a/docker/8.3/Dockerfile
+++ b/docker/8.3/Dockerfile
@@ -60,6 +60,7 @@ COPY start-container /usr/local/bin/start-container
 COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 COPY php.ini /etc/php/8.3/cli/conf.d/99-sail.ini
 RUN chmod +x /usr/local/bin/start-container
+RUN chmod -R 777 . 
 
 RUN apt-get update -y \
     && apt-get install cron -y \
