ABM-12-wip-20-19-2024: deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,9 @@ jobs:
     - name: Install dependencies
       run: npm install
 
+    - name: Disable Husky hooks
+      run: npx husky disable
+
     - name: Install Heroku CLI
       uses: akhileshns/heroku-deploy@v3.12.12
       with:
