--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -40,7 +40,11 @@ jobs:
       run: ./vendor/bin/sail artisan key:generate
 
     - name: Wait for MySQL to be ready
-      run: ./vendor/bin/sail exec mysql bash -c 'while ! mysqladmin ping -h"mysql" --silent; do sleep 1; done'
+      run: |
+        until ./vendor/bin/sail exec mysql mysqladmin ping -h"mysql" --silent; do
+          echo "Waiting for MySQL to be ready..."
+          sleep 1
+        done
 
     - name: Run database migrations
       run: ./vendor/bin/sail artisan migrate --force
@@ -62,5 +66,3 @@ jobs:
         fields: repo,message,commit,author,action,eventName,ref,workflow,job,took
       env:
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-
-  
